# coordinode-lsm-tree

./: .codecov.yml  .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.config/: nextest.toml
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/scripts/: run-benchmarks.sh
.github/workflows/: benchmark.yml  cleanup-branches.yml  coordinode-ci.yml  coordinode-release.yml  dependabot-auto-merge.yml  flamegraph.yml  issue-labeler.yml  release.yml  test.yml.disabled  upstream-monitor.yml
benches/: at_insert.rs  batch_ops.rs  block.rs  block_cache.rs  bloom.rs  columnar.rs  compaction.rs  compare_rocksdb.rs  ecc.rs  index_block.rs  level_manifest.rs  lsp.rs  memtable.rs  merge.rs  partial_decode.rs  partition_point.rs  prefix_bloom.rs  scan_since.rs  tight_space.rs  tli.rs  tree.rs
dev/bench/: data.js  index.html
dev/compare/: index.html
dev/compare/report/: index.html
docs/: BENCHMARKING.md  INVARIANTS.md  aad-block-format.md  data-integrity.md  external-wal.md  tight-space-compaction.md
examples/: external_wal.rs
src/: abstract_tree.rs  active_tombstone_set.rs  any_tree.rs  background_deleter.rs  backpressure.rs  cache.rs  checkpoint.rs  checksum.rs  coding.rs  comparator.rs  compression.rs  deletion_pause.rs  descriptor_table.rs  double_ended_peekable.rs  ecc.rs  encryption.rs  error.rs  file.rs  file_accessor.rs  format_version.rs  hash.rs  heal_hints.rs  heap.rs  ingestion.rs  inspect.rs  iter_guard.rs  key.rs  key_range.rs  lib.rs  loser_tree.rs  manifest.rs  merge.rs  merge_operator.rs  merge_source.rs  metrics.rs  mvcc_stream.rs  path.rs  pinnable_slice.rs  prefix.rs  range.rs  (+23 more)
src/active_tombstone_set/: tests.rs
src/background_deleter/: tests.rs
src/backpressure/: tests.rs
src/blob_tree/: gc.rs  handle.rs  ingest.rs  mod.rs
src/blob_tree/gc/: tests.rs
src/byteview/: builder.rs  byteview.rs  mod.rs  strview.rs
src/byteview/byteview/: tests.rs
src/byteview/strview/: tests.rs
src/cache/: tests.rs
src/checkpoint/: tests.rs
src/compaction/: delete_materialize.rs  drop_range.rs  fifo.rs  filter.rs  flavour.rs  heal.rs  maintenance.rs  major.rs  mod.rs  movedown.rs  pulldown.rs  seqno_zeroer.rs  stream.rs  tight_journal.rs  worker.rs
src/compaction/fifo/: tests.rs
src/comparator/: tests.rs
src/compression/: mod.rs  tests.rs  zstd_backend.rs  zstd_pure.rs
src/config/: block_size.rs  builder_tests.rs  compression.rs  delete_strategy.rs  filter.rs  hash_ratio.rs  locator.rs  mod.rs  pinning.rs  restart_interval.rs  tests.rs
src/deletion_pause/: tests.rs
src/ecc/: tests.rs
src/encryption/: aad.rs  aead.rs  block.rs  ecc_frame.rs  error.rs  key_chain.rs  mod.rs  tests.rs
src/file/: tests.rs
src/fs/: aligned_buf.rs  crash_fs.rs  direct_io.rs  fault_fs.rs  io_uring_fs.rs  io_uring_raw.rs  mem_fs.rs  mod.rs  std_fs.rs
src/hash/: tests.rs
src/heal_hints/: tests.rs
src/heap/: tests.rs
src/inspect/: census_tests.rs
src/io/: mod.rs  tests.rs
src/key_range/: tests.rs
src/loser_tree/: tests.rs
src/manifest/: tests.rs
src/manifest_blocks/: current_digest.rs  footer.rs  mod.rs  reader.rs  writer.rs
src/memtable/: arena.rs  interval_tree.rs  mod.rs  skiplist.rs  tests.rs  value_store.rs
src/merge/: tests.rs
src/merge_source/: tests.rs
src/metrics/: tests.rs
src/mvcc_stream/: tests.rs
src/prefix/: tests.rs
src/range/: tests.rs
src/range_tombstone/: tests.rs
src/range_tombstone_filter/: tests.rs
src/rate_limiter/: tests.rs
src/repair/: tests.rs
src/run_reader/: tests.rs
src/run_scanner/: tests.rs
src/runtime_config/: handle.rs  mod.rs  types.rs
src/salvage/: tests.rs
src/scrub/: ecc_tests.rs  tests.rs
src/secded/: tests.rs
src/seeking_merger/: tests.rs
src/seqno/: tests.rs
src/sfa/: LICENSE-MIT  checksum.rs  checksum_writer.rs  error.rs  mod.rs  reader.rs  writer.rs
src/sharded_cache/: tests.rs
src/slice/: mod.rs  tests.rs
src/slice_windows/: tests.rs
src/storage_stats/: tests.rs
src/table/: block_layout.rs  columnar.rs  columnar_predicate.rs  delete_bitmap.rs  id.rs  inner.rs  iter.rs  lazy_block.rs  locator.rs  meta.rs  mod.rs  multi_writer.rs  regions.rs  relocate.rs  scanner.rs  seqno_bounds.rs  tests.rs  util.rs  zone_map.rs
src/time/: tests.rs
src/tree/: cache_stats_tests.rs  cardinality_tests.rs  columnar_scan.rs  ingest.rs  inner.rs  mod.rs  sealed.rs
src/util/: tests.rs
src/value/: tests.rs
src/verify/: block_verify_tests.rs
src/version/: blob_file_list.rs  diff.rs  edit.rs  edit_log.rs  framing.rs  mod.rs  optimize.rs  persist.rs  recovery.rs  run.rs  super_version.rs
src/vlog/: accessor.rs  handle.rs  mod.rs  tests.rs
tests/: approximate_range_stats.rs  available_space.rs  blob_columnar_index.rs  blob_fifo_limit.rs  blob_tree_clear_reopen.rs  burr_filter_end_to_end.rs  cache_metadata_priority.rs  checkpoint_pitr.rs  clear_reclaim.rs  columnar_density_rewrite.rs  columnar_ingest.rs  columnar_read_paths.rs  columnar_roundtrip.rs  columnar_scan.rs  compaction_filter_seqno.rs  compaction_space_admission.rs  compat_corpus.rs  compat_matrix.rs  custom_comparator.rs  custom_comparator_compaction.rs  custom_seqno_generator.rs  directory_lock.rs  encryption_aad_threat_model.rs  encryption_roundtrip.rs  encryption_stress.rs  external_wal.rs  fault_injection_recovery.rs  inspect.rs  level_routing.rs  locator_read_path.rs  mem_fs_tree.rs  merge_on_read_relocation.rs  merge_on_read_visibility.rs  merge_operator.rs  merge_point_read_coverage.rs  meta_mirror.rs  multi_get.rs  multi_trees.rs  parallel_compaction.rs  partial_decode_range.rs  (+37 more)
tests/common/: mod.rs
tests/external_wal/: reference_wal.rs
tools/compare-rocksdb/: Cargo.toml
tools/compare-rocksdb/benches/: compaction.rs  compare.rs
tools/db_bench/: .gitignore  Cargo.toml
tools/sst-dump/: Cargo.toml
tools/sst-dump/src/: main.rs
tools/sst-dump/tests/: dump_block_smoke.rs  dump_smoke.rs  filter_stats_smoke.rs  hex_smoke.rs  index_dump_smoke.rs  properties_smoke.rs  repair_smoke.rs  salvage_smoke.rs  verify_smoke.rs
(+1022 files in other folders)
