[package]
name = "coordinode-lsm-tree"
description = "Embedded LSM-tree storage engine: BuRR filters, zstd dictionary compression, MVCC, range tombstones, merge operators, K/V separation, AES-256-GCM at rest."
license = "Apache-2.0"
version = "4.5.0"
edition = "2024"
rust-version = "1.92"
readme = "README.md"
include = ["src/**/*", "build.rs", "LICENSE-APACHE", "README.md", "CHANGELOG.md"]
repository = "https://github.com/structured-world/coordinode-lsm-tree"
homepage = "https://github.com/structured-world/coordinode-lsm-tree"
documentation = "https://docs.rs/coordinode-lsm-tree"
keywords = ["lsm-tree", "storage", "database", "embedded", "key-value"]
categories = ["data-structures", "database-implementations", "filesystem", "compression"]

[package.metadata.docs.rs]
# Build the docs.rs page with every feature enabled so the rendered
# crate page exposes the full public API surface (zstd dictionary
# compression, encryption, io-uring, bytes integration, metrics,
# ribbon-serde). cfg(docsrs) is set so #[cfg_attr(docsrs, ...)] items
# render their feature/availability badges.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "lsm_tree"
path = "src/lib.rs"

[features]
default = []
io-uring = ["dep:io-uring"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:structured-zstd"]
encryption = ["dep:aes-gcm", "dep:rand_chacha"]
bytes_1 = ["dep:bytes"]
metrics = []
# Vendored Ribbon filter retains its `#[cfg(feature = "ribbon-serde")]`
# guards (renamed from upstream's bare `serde` feature to avoid clashing
# with any future top-level serde feature in this crate). We do not
# consume the serde repr from inside this crate — the BuRR on-disk
# format is byteorder-encoded — but the feature wires `serde` as an
# optional dep so `--all-features` builds and a future extraction back
# into a standalone crate compile cleanly.
ribbon-serde = ["dep:serde"]

[dependencies]
bytes = { version = "1", optional = true }
byteorder = { package = "byteorder-lite", version = "0.1.0" }
byteview = "~0.10.1"
enum_dispatch = "0.3.13"
interval-heap = "0.0.5"
log = "0.4.27"
lz4_flex = { version = "0.13.0", optional = true, default-features = false }
structured-zstd = { version = "0.0.21", optional = true, default-features = false, features = ["std"] }
quick_cache = { version = "0.6.16", default-features = false, features = [] }
rustc-hash = "2.1.1"
self_cell = "1.2.0"
# Optional — only pulled in by the vendored Ribbon filter under the
# `ribbon-serde` feature flag (off by default).
serde = { version = "1", optional = true, features = ["derive"] }
sfa = "~1.0.0"
tempfile = "3.20.0"
varint-rs = "2.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
# Exact pin on a prerelease — RC API can churn between releases, so locking
# the exact version is intentional. The 0.11 surface we depend on:
#   - aes_gcm::aead::{AeadInOut, Generate, Nonce, Tag}
#   - AeadInOut::{encrypt_inout_detached, decrypt_inout_detached}
#   - Nonce::generate_from_rng (via Generate)
#   - Nonce::try_from / Tag::try_from
# rand_core re-exported via aes-gcm's `rand_core` feature so `aead::rand_core`
# exposes the rand_core 0.10 trait family (no version-skew).
# TODO: bump to stable aes-gcm 0.11.0 once released — at that point this pin
# becomes a normal "^0.11" caret requirement and the API list above can be
# treated as the public 0.11 surface, not a prerelease snapshot.
aes-gcm = { version = "=0.11.0-rc.3", optional = true, features = ["aes", "rand_core"] }
rand_chacha = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
fs_extra = "1.3.0"
nanoid = "0.5.0"
proptest = "1"
rand = "0.10.1"
# Used by the vendored ribbon-filter's #[cfg(feature = "ribbon-serde")]
# round-trip tests. Dev-only; production code does not depend on it.
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
test-log = "0.2.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
  'cfg(zstd_any)',
] }

[package.metadata.cargo-all-features]
denylist = []

[[bench]]
name = "merge"
harness = false
path = "benches/merge.rs"
required-features = []

[[bench]]
name = "memtable"
harness = false
path = "benches/memtable.rs"
required-features = []

[[bench]]
name = "bloom"
harness = false
path = "benches/bloom.rs"
required-features = []

[[bench]]
name = "index_block"
harness = false
path = "benches/index_block.rs"
required-features = []

[[bench]]
name = "batch_ops"
harness = false
path = "benches/batch_ops.rs"
required-features = []

[[bench]]
name = "zstd_dict"
harness = false
path = "benches/zstd_dict.rs"
required-features = []

[[bench]]
name = "lsp"
harness = false
path = "benches/lsp.rs"
required-features = []
