[package]
name = "coordinode-lsm-tree"
description = "Embedded LSM-tree storage engine: BuRR filters, zstd dictionary compression, MVCC, range tombstones, merge operators, K/V separation, AES-256-GCM at rest."
license = "Apache-2.0"
version = "4.5.0"
edition = "2024"
rust-version = "1.92"
readme = "README.md"
include = ["src/**/*", "build.rs", "LICENSE-APACHE", "README.md", "CHANGELOG.md"]
repository = "https://github.com/structured-world/coordinode-lsm-tree"
homepage = "https://github.com/structured-world/coordinode-lsm-tree"
documentation = "https://docs.rs/coordinode-lsm-tree"
keywords = ["lsm-tree", "storage", "database", "embedded", "key-value"]
categories = ["data-structures", "database-implementations", "filesystem", "compression"]

[package.metadata.docs.rs]
# Build the docs.rs page with every feature enabled so the rendered
# crate page exposes the full public API surface (zstd dictionary
# compression, encryption, io-uring, bytes integration, metrics,
# ribbon-serde). cfg(docsrs) is set so #[cfg_attr(docsrs, ...)] items
# render their feature/availability badges.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "lsm_tree"
path = "src/lib.rs"

[features]
# `std` is the canonical platform feature. Default-on so every existing
# downstream consumer keeps the current build profile (file I/O, threads,
# `std::sync` primitives, system clock). Turning it OFF puts the crate
# into no-std + alloc mode ŌĆö currently in progress: only foundational
# modules compile without `std`, the rest still imports `std::*` directly
# and is gated to migrate incrementally. The `cargo check
# --no-default-features --features alloc` CI job tracks migration progress
# (expected to fail until each module is ported). New code added to this
# crate MUST be no-std-friendly: prefer `core::*` / `alloc::*`, gate
# std-only primitives behind `#[cfg(feature = "std")]`, and pick external
# crates that support no-std.
default = ["std"]
std = []
# `alloc` is the minimal hard requirement ŌĆö the crate uses `Arc`,
# `Vec`, `Box` everywhere. Listed explicitly so consumers can pick it up
# without enabling `std` once the no-std migration completes per-module.
alloc = []
# Every feature below currently pulls in modules that use `std::*`
# directly (file I/O, threading, system clock, etc.). Make each one
# transitively depend on `std` so that `--no-default-features
# --features <X>` is automatically coherent ŌĆö without this, a consumer
# would have to remember to spell `--features std,X` or hit a wall of
# `unresolved module std` errors. As individual modules are ported to
# no-std + alloc (tracked in the migration epic), the `std`
# transitive dep can be lifted on a per-feature basis.
io-uring = ["dep:io-uring", "std"]
lz4 = ["dep:lz4_flex", "std"]
# The previous `zstd-pure = ["zstd"]` alias was removed. It was
# documented as deprecated when there were two candidate zstd backends
# on the roadmap; only structured-zstd remains, so the alias serves no
# purpose and is dropped per the standard deprecation lifecycle. The
# removal is signalled to release tooling as a breaking change via the
# conventional `!` markers on this PR's breaking commits (BuRR filter
# wire format, V5 manifest gate); release-plz raises the crate's major
# version on the next release tag accordingly.
zstd = ["dep:structured-zstd", "std"]
encryption = ["dep:aes-gcm", "dep:chacha20poly1305", "dep:rand_chacha", "std"]
bytes_1 = ["dep:bytes"]
metrics = []
# Vendored Ribbon filter retains its `#[cfg(feature = "ribbon-serde")]`
# guards (renamed from upstream's bare `serde` feature to avoid clashing
# with any future top-level serde feature in this crate). We do not
# consume the serde repr from inside this crate ŌĆö the BuRR on-disk
# format is byteorder-encoded ŌĆö but the feature wires `serde` as an
# optional dep so `--all-features` builds and a future extraction back
# into a standalone crate compile cleanly.
ribbon-serde = ["dep:serde"]
# Pulls RocksDB into the dev-dependency graph (no effect on the
# production crate surface ŌĆö gated dev-only). Enables the
# `benches/compare_rocksdb.rs` head-to-head harness: each criterion
# group runs the same workload through both engines and produces
# side-by-side timings for the gh-pages dashboard. Off by default
# because rocksdb pulls in a sizeable C dependency tree (libsnappy,
# liblz4, libbz2, librocksdb itself) ŌĆö regular `cargo test` / CI
# `cargo check` doesn't pay that compile cost.
compare-rocksdb = ["dep:rocksdb", "std"]

[dependencies]
bytes = { version = "1", optional = true }
byteorder = { package = "byteorder-lite", version = "0.1.0" }
byteview = "~0.10.1"
enum_dispatch = "0.3.13"
log = "0.4.27"
# `spin` provides a no_std-compatible Mutex. Used by
# `deletion_pause` so that module's only std footprint comes from the
# `Fs` trait it interacts with, not from its own synchronisation.
spin = { version = "0.12", default-features = false, features = ["mutex", "spin_mutex"] }
lz4_flex = { version = "0.13.0", optional = true, default-features = false }
structured-zstd = { version = "0.0.25", optional = true, default-features = false, features = ["std"] }
# `once_cell::race::OnceBox` ŌĆö the no-std + alloc one-shot primitive.
# We pick it over `std::sync::OnceLock` (which has both `set` and the
# stabilised `get_or_try_init` on our 1.92 MSRV) because OnceLock is
# std-only: it can't compile on the `cargo check
# --no-default-features --features alloc` CI target, and the crate's
# direction is no-std-friendly. Unconditional dep with
# `default-features = false, features = ["race"]` so the crate stays
# no-std-friendly even with `--no-default-features`. Used by:
#   - zstd `ZstdDictionary::prepared_handle` (canonical single-parse
#     across racers, no auxiliary `Mutex`)
#   - `deletion_pause` slot on tables / blob files (one-shot install of
#     the shared `Arc<DeletionPause>` after recovery / compaction).
once_cell = { version = "1", default-features = false, features = ["race"] }
quick_cache = { version = "0.6.16", default-features = false, features = [] }
rustc-hash = "2.1.1"
self_cell = "1.2.0"
# Optional ŌĆö only pulled in by the vendored Ribbon filter under the
# `ribbon-serde` feature flag (off by default).
serde = { version = "1", optional = true, features = ["derive"] }
sfa = "~1.0.0"
tempfile = "3.20.0"
varint-rs = "2.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
# Exact pin on a prerelease ŌĆö RC API can churn between releases, so locking
# the exact version is intentional. The 0.11 surface we depend on:
#   - aes_gcm::aead::{AeadInOut, Generate, Nonce, Tag}
#   - AeadInOut::{encrypt_inout_detached, decrypt_inout_detached}
#   - Nonce::generate_from_rng (via Generate)
#   - Nonce::try_from / Tag::try_from
# rand_core re-exported via aes-gcm's `rand_core` feature so `aead::rand_core`
# exposes the rand_core 0.10 trait family (no version-skew).
# TODO: bump to stable aes-gcm 0.11.0 once released ŌĆö at that point this pin
# becomes a normal "^0.11" caret requirement and the API list above can be
# treated as the public 0.11 surface, not a prerelease snapshot.
aes-gcm = { version = "=0.11.0-rc.3", optional = true, features = ["aes", "rand_core"] }
# Exact pin on the matching prerelease ŌĆö chacha20poly1305 0.11.0-rc.3 lines
# up with aes-gcm 0.11.0-rc.3 on the shared `aead` 0.6 surface, so both
# suites can share the same AeadInOut / Nonce / Tag types in the
# AEAD-dispatch module. Bumps in lockstep with aes-gcm when the stable
# 0.11.0 lands.
chacha20poly1305 = { version = "=0.11.0-rc.3", optional = true, features = ["rand_core"] }
rand_chacha = { version = "0.10", optional = true }
# Pulled in only by the `compare-rocksdb` feature, which the
# `benches/compare_rocksdb.rs` head-to-head harness gates on via
# `required-features` in [[bench]]. Off by default so regular
# `cargo test` / CI `cargo check` does NOT pay the cost of
# compiling rocksdb's C dependency tree (snappy, lz4, bz2, etc.).
rocksdb = { version = "0.24", default-features = false, features = ["lz4"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
fs_extra = "1.3.0"
nanoid = "0.5.0"
proptest = "1"
rand = "0.10.1"
# Used by the vendored ribbon-filter's #[cfg(feature = "ribbon-serde")]
# round-trip tests. Dev-only; production code does not depend on it.
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
test-log = "0.2.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
  'cfg(zstd_any)',
] }

[package.metadata.cargo-all-features]
denylist = []

[[bench]]
name = "merge"
harness = false
path = "benches/merge.rs"
required-features = []

[[bench]]
name = "memtable"
harness = false
path = "benches/memtable.rs"
required-features = []

[[bench]]
name = "bloom"
harness = false
path = "benches/bloom.rs"
required-features = []

[[bench]]
name = "index_block"
harness = false
path = "benches/index_block.rs"
required-features = []

[[bench]]
name = "batch_ops"
harness = false
path = "benches/batch_ops.rs"
required-features = []

[[bench]]
name = "zstd_dict"
harness = false
path = "benches/zstd_dict.rs"
required-features = []

[[bench]]
name = "lsp"
harness = false
path = "benches/lsp.rs"
required-features = []

[[bench]]
name = "compare_rocksdb"
harness = false
path = "benches/compare_rocksdb.rs"
required-features = ["compare-rocksdb"]
