# Standalone head-to-head benchmark crate — NOT part of the main
# `coordinode-lsm-tree` crate's workspace or feature graph. Lives
# here so the main crate's `cargo build --all-features` /
# `cargo clippy --all-features` / docs.rs build do NOT have to
# pull in RocksDB's C dependency tree (libsnappy, liblz4, libbz2,
# librocksdb itself, plus bindgen + libclang). Build / run with:
#
#     cd tools/compare-rocksdb && cargo bench
#
# Each criterion group runs the same workload through this crate
# and through RocksDB side-by-side; results land in
# `tools/compare-rocksdb/target/criterion/`. The gh-pages
# dashboard pipeline consumes those JSON outputs (per #244).
[package]
name = "compare-rocksdb-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Local path dep on the main crate. The `zstd` feature is enabled so
# the `*_zstd22` workload variants can drive our engine's zstd codec
# (`CompressionType::Zstd(22)`); the `None`-compression baseline
# groups still run on the same build. Future `*_lz4` variants add the
# `lz4` feature alongside their workload.
lsm-tree = { package = "coordinode-lsm-tree", path = "../..", features = ["zstd"] }
# RocksDB binding — the whole reason this crate exists outside the
# main `--all-features` graph. `default-features = false` strips
# the upstream default compression codecs (snappy, lz4, bz2, zlib);
# the `zstd` feature is enabled so the `*_zstd22` variants can set
# `DBCompressionType::Zstd` at level 22, matching our engine. The
# C-toolchain compile burden scales with the codecs the workloads
# actually need (a future `*_lz4` variant adds rocksdb's `lz4`).
rocksdb = { version = "0.24", default-features = false, features = ["zstd"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"

[[bench]]
name = "compaction"
harness = false
path = "benches/compaction.rs"
