# Standalone head-to-head benchmark crate — NOT part of the main
# `coordinode-lsm-tree` crate's workspace or feature graph. Lives
# here so the main crate's `cargo build --all-features` /
# `cargo clippy --all-features` / docs.rs build do NOT have to
# pull in RocksDB's C dependency tree (libsnappy, liblz4, libbz2,
# librocksdb itself, plus bindgen + libclang). Build / run with:
#
#     cd tools/compare-rocksdb && cargo bench
#
# Each criterion group runs the same workload through this crate
# and through RocksDB side-by-side; results land in
# `tools/compare-rocksdb/target/criterion/`. The gh-pages
# dashboard pipeline consumes those JSON outputs (per #244).
#
# An empty `[workspace]` pins this crate as its own workspace root. The main
# crate already lists it under `workspace.exclude`, but exclusion alone does not
# stop Cargo from absorbing it into a DIFFERENT workspace manifest higher up the
# directory tree (e.g. a stray one in a CI runner's temp dir, or a surrounding
# monorepo). Declaring our own root makes a standalone `cargo bench` here immune
# to whatever lives above this directory.
[workspace]

[package]
name = "compare-rocksdb-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Local path dep on the main crate. The `zstd` feature is enabled so
# the `*_zstd22` workload variants can drive our engine's zstd codec
# (`CompressionType::Zstd(22)`); the `None`-compression baseline
# groups still run on the same build. Future `*_lz4` variants add the
# `lz4` feature alongside their workload.
# `page_ecc` is compiled in so the `lsm-paranoid` bench preset can measure
# Page-ECC write overhead; the default `rocksdb-parity` preset keeps it OFF.
lsm-tree = { package = "coordinode-lsm-tree", path = "../..", features = ["zstd", "page_ecc"] }
# RocksDB binding — the whole reason this crate exists outside the
# main `--all-features` graph. `default-features = false` strips
# the upstream default compression codecs (snappy, lz4, bz2, zlib);
# the `zstd` feature is enabled so the `*_zstd22` variants can set
# `DBCompressionType::Zstd` at level 22, matching our engine. The
# C-toolchain compile burden scales with the codecs the workloads
# actually need (a future `*_lz4` variant adds rocksdb's `lz4`).
rocksdb = { version = "0.24", default-features = false, features = ["zstd"] }
# SurrealKV — pure-Rust embedded LSM/MVCC store, the Rust-native
# comparison point. Not published to crates.io, so pinned to a git tag
# for reproducibility. No FFI / libclang burden (unlike rocksdb).
# Pinned to the exact commit behind tag v0.21.2. The repo gitignores
# Cargo.lock, so a bare `tag = "v0.21.2"` could silently resolve to a
# different commit if the tag were ever retargeted — `rev` makes the
# benchmark dependency reproducible.
surrealkv = { git = "https://github.com/surrealdb/surrealkv", rev = "d7e85669f59493c9501adcf0289e497ee206ffae" } # v0.21.2
# SurrealKV needs a tokio runtime: its `build()` spawns background
# compaction tasks via `tokio::spawn`, and `commit()` is async. The
# criterion harness is sync, so each surrealkv arm owns a multi-thread
# runtime and drives open / commit through `rt.block_on`.
tokio = { version = "1", features = ["rt-multi-thread"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"
